<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="fr.epitez.androidlayout_linear.MainActivity"
    android:showDividers="beginning|none|middle|end"
    android:orientation="vertical"
    android:background="@android:color/background_light"
    android:onClick="onClick">

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/linear_layout"
        android:id="@+id/button_linearlayout"
        android:layout_gravity="center_horizontal"
        android:onClick="onClick" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/relative_layout"
        android:id="@+id/button_relactivelayout"
        android:layout_gravity="center_horizontal"
        android:onClick="onClick" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/list_view"
        android:id="@+id/button_listview"
        android:layout_gravity="center_horizontal" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/grid_view"
        android:id="@+id/button_gridview"
        android:layout_gravity="center_horizontal" />
</LinearLayout>
